# finos

./: .cmake-format  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: ci-build.yml  coverage-sanitizers.yml  sonarcloud.yml
cmake/: Conan.cmake
src/: CMakeLists.txt
src/finos/: Finos.c  Finos.h
tests/: CMakeLists.txt
tests/src/: FinosTests.cpp
